--- a/styles/fields/index.css
+++ b/styles/fields/index.css
@@ -1,3 +1,4 @@
+@import url(droparea.css);
 input, textarea, select {
   appearance: none;
   width: 100%;
@@ -16,7 +17,8 @@ label {
 
 input:focus,
 textarea:focus,
-select:focus {
+select:focus,
+input[type="date"]:focus-within {
   outline: 0.25rem solid var(--surface-secondary);
   border: .125rem solid var(--stroke-highlight);
   outline-offset: .1px;
