--- a/styles/global.css
+++ b/styles/global.css
@@ -16,6 +16,7 @@
   --stroke-default: #D6D3D1;
   --stroke-highlight: #F3541C;
   --semantic-error: #DC2626;
+  --brand-dark: #E43A12;
 
   /*Fonts*/
   --font-family: "Poppins", serif;
